<resources>
    <string name="app_name">Notification</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="enter_the_title">Enter the title</string>
    <string name="enter_the_message">Enter the message</string>
    <string name="send_notification_to_channel_1">Send notification to Channel 1</string>
    <string name="send_notification_to_channel_2">Send notification to Channel 2</string>
    <string name="action_successful">Action Successful</string>
    <string name="long_text_message">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc sed leo consectetur, iaculis felis non, porta urna. Integer vulputate nisl at massa facilisis fringilla. Ut egestas, eros placerat placerat accumsan, orci velit finibus sem, in placerat lorem dolor in odio. Mauris auctor tortor eget quam facilisis commodo. Nulla in auctor justo, dapibus pharetra elit. Nam malesuada gravida porttitor. Integer placerat, est condimentum facilisis commodo, magna magna sodales dolor, non vestibulum risus tellus ut nibh. Donec accumsan mauris quis libero ullamcorper, sed tincidunt purus lobortis. Nunc sed leo vel est ullamcorper aliquet id eget dolor. Maecenas imperdiet lorem pellentesque, finibus risus in, mollis dui. Cras bibendum risus id rutrum sagittis. Donec ullamcorper, nisi vel rhoncus ullamcorper, urna ligula pretium nunc, at volutpat ex erat bibendum metus.</string>
    <string name="simple_notification">Simple Notification</string>
    <string name="notification_in_category">Notification in category</string>
    <string name="adding_action">Adding action</string>
    <string name="big_message">Big Message</string>
    <string name="image_in_notification">Image in notification</string>
    <string name="progress_in_notification">Progress in notification</string>
    <string name="adding_reply_action">Adding reply action</string>
    <string name="str_enter_your_reply_here">Enter your reply here</string>
    <string name="str_reply">Reply</string>
</resources>