<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/launchBtnContainerScrollStyle">

    <LinearLayout style="@style/launchBtnContainerStyle">

        <Button
            android:id="@+id/simpleNotificationId"
            style="@style/launchBtnStyle"
            android:text="@string/simple_notification" />
        <Button
            android:id="@+id/simpleCategoryNotificationId"
            style="@style/launchBtnStyle"
            android:text="@string/notification_in_category" />
        <Button
            android:id="@+id/addingActionId"
            style="@style/launchBtnStyle"
            android:text="@string/adding_action" />
        <Button
            android:id="@+id/bigMsgId"
            style="@style/launchBtnStyle"
            android:text="@string/big_message" />
        <Button
            android:id="@+id/imageInNotificationId"
            style="@style/launchBtnStyle"
            android:text="@string/image_in_notification" />
        <Button
            android:id="@+id/progressNotificationId"
            style="@style/launchBtnStyle"
            android:text="@string/progress_in_notification" />
        <Button
            android:id="@+id/addReplyActionId"
            style="@style/launchBtnStyle"
            android:text="@string/adding_reply_action" />

    </LinearLayout>

</ScrollView>

