<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootId"
    style="@style/launchBtnContainerScrollStyle">

    <LinearLayout style="@style/launchBtnContainerStyle">

        <EditText
            android:id="@+id/edit_text_title"
            style="@style/launchEditTextStyle"
            android:hint="@string/enter_the_title"
            android:importantForAutofill="no" />
        <EditText
            android:id="@+id/edit_text_message"
            style="@style/launchEditTextStyle"
            android:importantForAutofill="no"
            android:hint="@string/enter_the_message" />
        <Button
            android:id="@+id/sendOnChannelOneId"
            style="@style/launchBtnStyle"
            android:text="@string/send_notification_to_channel_1" />
        <Button
            android:id="@+id/sendOnChannelTwoId"
            style="@style/launchBtnStyle"
            android:text="@string/send_notification_to_channel_2" />

    </LinearLayout>

</ScrollView>